kuber/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-ms-hw-service
spec:
  selector:
    app: otus-ms-hw
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
