kuber/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ms-hw-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-ms-hw-service
                port:
                  number: 8080
